# CN-project

./: .commit_message.txt  .gitignore  ABOUT_PAGE_IMPLEMENTATION.md  CMakeLists.txt  CROSS_BROWSER_TESTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKREF.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  HISTORY_FIX.md  PHASE3_TESTING.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  TEST_RESULTS.md  VERIFICATION_SUMMARY.md  backfill_history.sh  implementation-summary.md  nixpacks.toml  project-report.md  railway.toml  run.sh  run_phase3_tests.sh  start.sh  test_websocket.sh
data/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  history.log.backup
docs/: CNAME  about.html  app.js  history.html  history.js  index.html  protocol.md  style.css  view.html
documentation/: concurrency-testing.md  cross-browser-testing.md  history-testing.md  migration-guide.md  testing-guide.md  websocket-testing.md
scripts/: build.sh  fix_tests.sh  init.sh  move_scripts.sh  rebuild.sh  restart.sh  run.sh  run_all_tests.sh  smoke_test.sh  test_concurrency.sh  test_websocket.sh  test_websocket_reconnect.sh  verify_deployment.sh
src/: CMakeLists.txt  HttpServer.java  MainServer.java  RequestHandler.java  ServerLogger.java  Storage.java  StorageHistory.java  Utils.java  WebSocketServer.java
src/client/: subscriber_client.cpp
src/common/: serialization.cpp  serialization.hpp  types.hpp
src/feedgen/: feed_generator.cpp
src/server/: admin_http.cpp  broadcaster.cpp  broadcaster.hpp  csv_reader.cpp  csv_reader.hpp  ingest_server.cpp  normalizer.cpp  normalizer.hpp  persistence.cpp  persistence.hpp  replay_server.cpp  token_bucket.cpp  token_bucket.hpp  websocket_bridge.cpp
tests/: CMakeLists.txt  test_replay.cpp  test_serialization.cpp  test_smoothing.cpp  test_token_bucket.cpp
web/: about.html  app.js  debug.html  history.html  history.js  index.html  style.css  view.html
